# RSI-TugasPrak2

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: e5f91baee565_init.py
data/: postmaster.pid
data/base/1/: 2619  2696  2840  2841  pg_internal.init
data/base/16384/: 1247  1249  1259  16389  16392  16394  16403  16410  16416  16417  16419  16425  16438  16455  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
data/base/16386/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13460  13460_fsm  13465  (+225 more)
data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
src/: app.py  seed.py
src/controllers/: account.py  account_controller.py  event.py  event_controller.py  log_controller.py  registration.py  registration_controller.py  role.py  role_controller.py  user_controller.py
src/database/: connection.py
src/dto/: account_dto.py  event.py  event_dto.py  registration_dto.py  role_dto.py  user_dto.py
src/repositories/: account.py  account_repository.py  event.py  event_repository.py  log.py  registration.py  registration_repository.py  role.py  role_repository.py  user.py  user_repository.py
src/routes/: __init__.py  account_route.py  event_route.py  registration_routes.py  role_route.py  user_route.py
src/services/: account_service.py  event.py  event_service.py  registration_service.py  role_service.py  user_service.py
(+1 files in other folders)
